# FutonEspaiHUB

./: .gitignore  010_woo_cierre_lote_D_FINAL.sql  011_price_proposals_add_rolled_back_status.sql  ABRIR_FUTON_ESPAI.bat  Abrir ERP.bat  CHANGELOG.md  CHECKPOINT_V62_1_CODEX.md  CODEX_HANDOFF_INDEX.md  CODEX_PROMPT_REFACTORIZACION.md  CODEX_REVIEW_BRIEF_FUTONHUB_V13.md  ESTRUCTURA_PROYECTO.md  FutonHUB_v13_Documentacion_para_Codex.docx  IMPORTAR_12_ITEMS_E_2026_03.bat  INSTALAR_DEPENDENCIAS_ERP.bat  INSTRUCCIONES_EXE.md  MANIFEST_SHA256.txt  PREVIEW_IMPORTAR_12_ITEMS_E_2026_03.bat  README.md  README_CHECKPOINT_V13.md  README_MULTI_PC_ERP.md  README_V60_WOO_CIERRE_FINAL.md  README_V61_1_ROLLBACK_FIX.md  README_V61_2_BLACKBOX_VERIFIED.md  README_V61_PUBLICACION_PRECIO_Y_ROLLBACK_REAL.md  VERSIONING.md  abrir_futon_espai.py  crear_exe_windows.bat  crear_exe_windows_debug.bat  requirements_erp.txt
GestorWoo/: .env.example  .gitignore  FutonEspaiLauncher.py  README.md  gestorwoo.py  importar_12_items_e_2026_03.py  pyproject.toml
GestorWoo/scripts/: rollback_candidatos_cloud.bat  rollback_snapshot_cloud.bat
GestorWoo/tests/: test_architecture.py  test_characterization_blackbox_persistence.py  test_characterization_dashboard.py  test_characterization_entrypoint.py  test_characterization_inventory_create.py  test_characterization_inventory_detail.py  test_characterization_inventory_edit.py  test_characterization_inventory_history_sources.py  test_characterization_inventory_list.py  test_characterization_inventory_stock.py  test_characterization_pack_components.py  (+10 more)
(+318 files in other folders)
