[project]
name = "futonhub"
version = "0.4.0rc2"
description = "Mini ERP interno para Futon Espai."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "supabase>=2.0.0",
]

[project.scripts]
futonhub = "futonhub.app.cli:main"
gestorwoo = "gestorwoo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["futonhub*", "gestorwoo*"]
